<resources>
    <string name="app_name">Climate Rwanda</string>
    <string name="choose_language">Choose a display language</string>
    <string name="splash_text">Rwanda</string>
    <string name="agriculture">Agriculture</string>
    <string name="Weather">Weather</string>
    <string name="disasters">Disasters</string>
    <string name="areas">Areas</string>
    <string name="settings">Settings</string>
    <string name="environment">Environment</string>
    <string name="explore_rwanda">Explore Rwanda</string>
    <string name="apply_text">Apply for notifications</string>
    <string name="as_farmer">Apply as farmer</string>
    <string name="as_citizen">Apply as citizen</string>
    <string name="as_tourist">Apply as tourist</string>
    <string name="northern">Northern ></string>
    <string name="southern">Southern ></string>
    <string name="eastern">Eastern ></string>
    <string name="western">Western ></string>
    <string name="kigali_city">Kigali City ></string>
    <string name="air_pollution">Air pollution</string>
</resources>
